5.0a2 -> 5.0a3:
    - jbj: remove headerWrite() from the public API, use rpmpkgWrite instead.
    - jbj: convert last headerWrite to use rpmpkgWrite instead.
    - jbj: conver 2 (of 9 remaining) headerRead's to use rpmpkgRead instead.
    - jbj: add newlines to error message spew from pkgio.
    - jbj: fix: read from the input, not the output, fd.
    - jbj: bury rpmReadHeader underneath rpmpkgRead("Header", ...).
    - jbj: use the fd attached pgpDig everywhere necessary.
    - jbj: attach pgpDig to the fd being used to verify signatures.
    - jbj: splint fiddles for refcounted storage.
    - jbj: add refcounts to rpmwf and pgpDig, they're gonna be snarly.
    - jbj: eliminate the headerCheck recursion check. not seen w rpm code paths.
    - jbj: pass dig, not ts, through pkgio.c header routines.
    - jbj: eliminate 2 of 3 remaining uses of headerWrite.
    - jbj: fix: initialize _nolead to 0, not 1.
    - jbj: add "struct utimbuf" and "struct utsname" to eliminate perl wanings.
    - jbj: adjust includes throughout.
    - jbj: move popt.h from rpmlib.h to rpmcli.h, most routines don't need.
    - jbj: don't include rpmcb.h from rpmlib.h, explcit includes instead.
    - jbj: update Doxyfile.
    - jbj: rename rpmmessages.h -> rpmcb.h consistent with callback content.
    - jbj: doScript: use pid_t, not int.
    - jbj: eliminate rpmerr.h, use rpmlog.h instead.
    - jbj: eliminate rpmMessage and RPMMESS_FOO constants, use rpmlog instead.

5.0a1 -> 5.0a2:
    - jbj: fix: don't add RPMTAG_ARCH to pubkeys, pubkeys cannot be erased.
    - afb: make devtool %standalone include the required %{_rpmhome}/magic.
    - jbj: fix: handle absolute paths to spec files again.
    - jbj: fix: don't attempt header sanity checks on pubkeys.
    - jbj: fix: don't loop on failed lookup by instance.
    - jbj: Eliminate SUPPORT_RPMV3_PROVIDE_SELF Provies: N = E:V-R retrofit.
    - jbj: Eliminate SUPPORT_RPMV3_BASENAMES_HACKS file path conversions.